術式装填ガントレットのエンチャントを他アイテムと同じように変更
(cherry picked from commit fde89564728b586d0f042cea085bbb44f62932ed)