@@ -16,6 +16,7 @@ import jp.aquafactory.apprenticecodex.block.spellcasterworkbench.SpellcasterWork
 import jp.aquafactory.apprenticecodex.config.ApprenticeCodexServerConfig;
 import jp.aquafactory.apprenticecodex.item.CalibrationAdjustmentHint;
 import jp.aquafactory.apprenticecodex.item.CalibrationAdjustmentRule;
+import jp.aquafactory.apprenticecodex.item.CalibrationAdjustmentStorage;
 import jp.aquafactory.apprenticecodex.item.CalibrationAdjustmentTooltip;
 import jp.aquafactory.apprenticecodex.item.SpellCalibrationAdjustmentTarget;
 import jp.aquafactory.apprenticecodex.item.WeaponImbueCooldownHelper;
@@ -54,12 +55,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.EnchantmentInstance;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.fml.ModList;
 import net.minecraftforge.registries.ForgeRegistries;
-
-import static jp.aquafactory.apprenticecodex.gametest.EnchantmentApplicationGameTestSupport.MALUM_MOD_ID;
-import static jp.aquafactory.apprenticecodex.gametest.EnchantmentApplicationGameTestSupport.MALUM_REPLENISHING;
-import net.minecraft.world.item.enchantment.EnchantmentHelper;
 
 import java.util.HashSet;
 
@@ -372,7 +368,7 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
                     var effectLines = rule.effectLines();
                     helper.assertTrue(!effectLines.isEmpty() && effectLines.size() <= 3,
                             "Calibration display rule should expose one to three effect lines: "
-                                    + BuiltInRegistries.ITEM.getKey(stack.getItem()) + "/" + rule.displayId());
+                                    + ForgeRegistries.ITEMS.getKey(stack.getItem()) + "/" + rule.displayId());
                     for (var effectLine : effectLines) {
                         helper.assertTrue(
                                 effectLine.getContents() instanceof TranslatableContents contents
@@ -380,19 +376,19 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
                                         "jei.apprenticecodex.spell_calibration_bench.effect."
                                 ),
                                 "Calibration effect lines should use the dedicated translation key prefix: "
-                                        + BuiltInRegistries.ITEM.getKey(stack.getItem()) + "/" + rule.displayId()
+                                        + ForgeRegistries.ITEMS.getKey(stack.getItem()) + "/" + rule.displayId()
                         );
                     }
                     var displayCandidates = rule.collectDisplayCandidates();
                     helper.assertFalse(displayCandidates.isEmpty(),
                             "Calibration display rule should expose at least one candidate: "
-                                    + BuiltInRegistries.ITEM.getKey(stack.getItem()) + "/" + rule.displayId());
+                                    + ForgeRegistries.ITEMS.getKey(stack.getItem()) + "/" + rule.displayId());
                     for (var candidate : displayCandidates) {
                         helper.assertTrue(target.canPlaceCalibrationAdjustment(stack, 0, candidate),
                                 "Calibration display candidate should pass the target rule: "
-                                        + BuiltInRegistries.ITEM.getKey(candidate.getItem()));
+                                        + ForgeRegistries.ITEMS.getKey(candidate.getItem()));
                     }
-                    var representative = displayCandidates.getFirst();
+                    var representative = displayCandidates.get(0);
                     helper.assertTrue(
                             rule.conflicts(representative, representative)
                                     == (rule.duplicatePolicy()
@@ -415,23 +411,19 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
             var gauntlet = targets[0];
             var gauntletProfile = ((SpellCalibrationAdjustmentTarget) gauntlet.getItem())
                     .getCalibrationAdjustmentProfile(gauntlet);
-            helper.assertTrue(gauntletProfile.rules().size() == 4,
-                    "Scrollcaster Gauntlet should expose all four hint groups from its rules");
+            helper.assertTrue(gauntletProfile.rules().size() == 3,
+                    "Scrollcaster Gauntlet should expose its three supported hint groups");
             helper.assertTrue(gauntletProfile.rules().get(0).hint() instanceof CalibrationAdjustmentHint.TaggedItems,
                     "Scrollcaster Gauntlet slot upgrades should use a generated tag hint");
-            helper.assertTrue(gauntletProfile.rules().get(3).hint() instanceof CalibrationAdjustmentHint.Translatable,
+            helper.assertTrue(gauntletProfile.rules().get(2).hint() instanceof CalibrationAdjustmentHint.Translatable,
                     "Scrollcaster Gauntlet school runes should use a translated category hint");
             helper.assertTrue(gauntletProfile.rules().get(0).constraintDisplay().translationKey().isEmpty(),
                     "Scrollcaster Gauntlet slot upgrades should omit constraint text");
             helper.assertTrue(gauntletProfile.rules().get(1).constraintDisplay().translationKey()
-                            .filter("jei.apprenticecodex.spell_calibration_bench.constraint.same_enchantment"::equals)
-                            .isPresent(),
-                    "Scrollcaster Gauntlet enchantment books should use the same-enchantment constraint");
-            helper.assertTrue(gauntletProfile.rules().get(2).constraintDisplay().translationKey()
                             .filter("jei.apprenticecodex.spell_calibration_bench.constraint.same_effect"::equals)
                             .isPresent(),
                     "Scrollcaster Gauntlet freecast staffs should use the same-effect constraint");
-            helper.assertTrue(gauntletProfile.rules().get(3).constraintDisplay().translationKey()
+            helper.assertTrue(gauntletProfile.rules().get(2).constraintDisplay().translationKey()
                             .filter("jei.apprenticecodex.spell_calibration_bench.constraint.school_rune"::equals)
                             .isPresent(),
                     "Scrollcaster Gauntlet school runes should use the school-rune constraint");
@@ -441,7 +433,7 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
                     "add_scroll_slot"
             );
             var slotEffect = (TranslatableContents) gauntletProfile.rules().get(0)
-                    .effectLines().getFirst().getContents();
+                    .effectLines().get(0).getContents();
             helper.assertTrue(
                     slotEffect.getArgs().length == 1
                             && slotEffect.getArgs()[0] instanceof Number count
@@ -450,63 +442,10 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
             );
             assertCalibrationEffectKeys(
                     helper,
-                    gauntletProfile.rules().get(1),
-                    "add_enchantment_1",
-                    "add_enchantment_2"
-            );
-            assertCalibrationEffectKeys(
-                    helper,
-                    gauntletProfile.rules().get(3),
+                    gauntletProfile.rules().get(2),
                     "change_spell_power_1",
                     "change_spell_power_2"
             );
-
-            var lookupProvider = helper.getLevel().registryAccess();
-            var displayEnchantmentLookup = lookupProvider.lookupOrThrow(Registries.ENCHANTMENT);
-            var wisdom = displayEnchantmentLookup.getOrThrow(
-                    jp.aquafactory.apprenticecodex.enchantment.Enchantments.WISDOM
-            );
-            try (var ignored = ApprenticeCodexServerConfig.useScrollcasterGauntletConfigOverrideForGameTest(
-                    java.util.List.of(),
-                    java.util.List.of()
-            )) {
-                var displayBook = gauntletProfile.rules().get(1)
-                        .collectDisplayCandidates(gauntlet, lookupProvider)
-                        .getFirst();
-                helper.assertTrue(EnchantmentHelper.getEnchantmentsForCrafting(displayBook).getLevel(wisdom) == 1,
-                        "Scrollcaster Gauntlet JEI sample should prefer a level-one Wisdom book");
-                var displayResult = gauntlet.copy();
-                helper.assertTrue(
-                        ((SpellCalibrationAdjustmentTarget) displayResult.getItem())
-                                .trySetCalibrationAdjustment(displayResult, 0, displayBook, lookupProvider),
-                        "Scrollcaster Gauntlet JEI Wisdom sample should be accepted"
-                );
-                helper.assertTrue(EnchantmentHelper.getEnchantmentsForCrafting(displayResult).getLevel(wisdom) == 1,
-                        "Scrollcaster Gauntlet JEI result should apply Wisdom from its sample book");
-            }
-
-            var wisdomId = wisdom.key().location();
-            try (var ignored = ApprenticeCodexServerConfig.useScrollcasterGauntletConfigOverrideForGameTest(
-                    java.util.List.of(wisdomId.toString()),
-                    java.util.List.of()
-            )) {
-                var fallbackBook = gauntletProfile.rules().get(1)
-                        .collectDisplayCandidates(gauntlet, lookupProvider)
-                        .getFirst();
-                var fallbackEnchantments = EnchantmentHelper.getEnchantmentsForCrafting(fallbackBook);
-                helper.assertTrue(fallbackEnchantments.size() == 1,
-                        "Scrollcaster Gauntlet JEI fallback sample should contain one enchantment");
-                var fallbackId = fallbackEnchantments.entrySet().iterator().next().getKey()
-                        .unwrapKey()
-                        .orElseThrow()
-                        .location();
-                helper.assertTrue(
-                        fallbackId.equals(
-                                jp.aquafactory.apprenticecodex.enchantment.Enchantments.ALACRITY.location()
-                        ),
-                        "Scrollcaster Gauntlet JEI fallback should use the first Apprentice's Codex enchantment by ID"
-                );
-            }
 
             var autocastProfile = ((SpellCalibrationAdjustmentTarget) targets[4].getItem())
                     .getCalibrationAdjustmentProfile(targets[4]);
@@ -569,12 +508,12 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
             sharpnessBook.setHoverName(Component.literal("Stored calibration item"));
             sharpnessBook.setCount(4);
             var anotherSharpnessBook = sharpnessBook.copy();
-            var unbreakingBook = new ItemStack(Items.ENCHANTED_BOOK);
-            EnchantedBookItem.addEnchantment(unbreakingBook,
-                    new EnchantmentInstance(Enchantments.UNBREAKING, 1));
-            helper.assertTrue(SpellCalibrationAdjustmentGameTestSupport.setCalibrationAdjustment(
-                            gauntlet, 0, sharpnessBook),
-                    "Scrollcaster Gauntlet should accept a supported enchantment book");
+            CalibrationAdjustmentStorage.set(
+                    gauntlet,
+                    0,
+                    ScrollcasterGauntlet.CALIBRATION_ADJUSTMENT_SLOT_COUNT,
+                    sharpnessBook
+            );
             var expectedStoredBook = sharpnessBook.copy();
             expectedStoredBook.setCount(1);
             var storedBook = SpellCalibrationAdjustmentGameTestSupport.getCalibrationAdjustment(gauntlet, 0);
@@ -591,21 +530,7 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
                     "New writes should use the common adjustment storage root");
             helper.assertFalse(SpellCalibrationAdjustmentGameTestSupport.canPlaceCalibrationAdjustment(
                             gauntlet, 1, anotherSharpnessBook),
-                    "Scrollcaster Gauntlet should reject the same first enchantment twice");
-            helper.assertTrue(SpellCalibrationAdjustmentGameTestSupport.canPlaceCalibrationAdjustment(
-                            gauntlet, 1, unbreakingBook),
-                    "Scrollcaster Gauntlet should accept a different first enchantment");
-            if (ModList.get().isLoaded(MALUM_MOD_ID)) {
-                var replenishing = ForgeRegistries.ENCHANTMENTS.getValue(MALUM_REPLENISHING);
-                helper.assertTrue(replenishing != null, "Malum Replenishing is not registered");
-                var replenishingBook = new ItemStack(Items.ENCHANTED_BOOK);
-                EnchantedBookItem.addEnchantment(replenishingBook, new EnchantmentInstance(replenishing, 2));
-                helper.assertTrue(SpellCalibrationAdjustmentGameTestSupport.setCalibrationAdjustment(
-                                gauntlet, 2, replenishingBook),
-                        "Scrollcaster Gauntlet should accept a Replenishing enchanted book");
-                helper.assertTrue(gauntlet.getEnchantmentLevel(replenishing) == 2,
-                        "Scrollcaster Gauntlet should transfer Replenishing II from its calibration book");
-            }
+                    "Scrollcaster Gauntlet should reject new enchanted-book adjustments");
         });
     }
 
@@ -664,8 +589,12 @@ final class SpellCalibrationEquipmentGameTestScenarios extends ApprenticeCodexGa
                     io.redspace.ironsspellbooks.registries.ItemRegistry.LESSER_SPELL_SLOT_UPGRADE.get()
             );
             var target = (SpellCalibrationAdjustmentTarget) gauntlet.getItem();
-            helper.assertTrue(target.trySetCalibrationAdjustment(gauntlet, 0, storedBook),
-                    "Tooltip test should store an enchanted book in the first adjustment slot");
+            CalibrationAdjustmentStorage.set(
+                    gauntlet,
+                    0,
+                    ScrollcasterGauntlet.CALIBRATION_ADJUSTMENT_SLOT_COUNT,
+                    storedBook
+            );
             helper.assertTrue(target.trySetCalibrationAdjustment(gauntlet, 2, slotUpgrade),
                     "Tooltip test should store a slot upgrade without filling the middle adjustment slot");
 
